# pit-backtest

./: .bench-baseline.json  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: perf-budget.yml
data/snapshots/: manifest.toml
docs/: ROADMAP.md  TESTING.md
docs/decisions/: 0001-spec-critique.md  0002-roadmap-review.md  0003-architecture.md  0004-rebalance-calendar-independence.md  0005-m2-cost-realism-plan.md  0006-trailing-period-spy-reconciliation.md  0007-fim-2018-demoted-to-upper-ceiling.md  0008-ssga-nominal-year-annualization-and-tolerances.md  0009-impactedpricesource-policy-and-m2-pr-b-structure.md  0010-sensitivity-band-runner.md  0011-tolerance-contract-dormancy-at-m2.md  0012-perf-budget-ci-phase-0-noise-floor.md  0013-psr-dsr-mintrl-public-api-and-bailey-ldp-2014-pin-correction.md  0014-drawdown-duration-report-contract.md  0015-cv-typevar-protocol-and-split-test-groups.md  0016-cpcv-deterministic-factor-and-block-bootstrap-uncertainty.md  0017-sp500-snapshot-universe-model.md
docs/methodology/: cost_model_tolerance.md  dataset_versioning.md  determinism.md  pydantic_polars_boundary.md  total_return_reconstruction.md
docs/research/: 0001-existing-backtesters.md  0002-methodology.md
docs/research/sources/: backtrader.md  bt.md  methodology-afml-backtesting.md  methodology-almgren-chriss.md  methodology-backtest-overfitting.md  methodology-point-in-time.md  methodology-practitioner-postmortems.md  nautilus_trader.md  qstrader.md  vectorbt.md  zipline.md
examples/: constant_weight_three_names.py  sp500_momentum_study.py  sp500_survivorship.py  spy_buy_and_hold.py  spy_cost_sensitivity.py
scripts/: diagnose_1y_drift.py  diagnose_pull.py  pull_m1_data.py  pull_m5_data.py
src/pit_backtest/: __init__.py
src/pit_backtest/analytics/: __init__.py  bootstrap.py  concentration.py  distribution.py  drawdown.py  result_adapter.py  scorecard.py  sensitivity.py  sharpe.py
src/pit_backtest/bench/: __init__.py  compare.py  spy_20y.py
src/pit_backtest/cli/: __init__.py  config.py  main.py
src/pit_backtest/data/: __init__.py  adjustments.py  contracts.py  records.py  resolver.py  rolling.py  universe.py  validated.py
src/pit_backtest/data/sources/: __init__.py  base.py  manifest.py  sharadar.py  sharadar_pull.py  ssga.py
src/pit_backtest/engine/: __init__.py  backtest.py  bar_loop.py  calendar.py  constant_weight_result.py  m1_demo.py  reference.py  runner.py  spy_reconciliation.py  state.py
src/pit_backtest/execution/: __init__.py  clock.py  matching.py  orders.py
src/pit_backtest/execution/cost/: __init__.py  base.py  commission.py  impact.py
src/pit_backtest/policy/: __init__.py  base.py  equal_weight.py  top_quintile.py
src/pit_backtest/risk/: __init__.py  attribution.py
src/pit_backtest/signal/: __init__.py  base.py  equal_weight.py  momentum.py
src/pit_backtest/utils/: __init__.py  frames.py  logging.py  timezones.py
src/pit_backtest/validation/: __init__.py  confidence_tier.py  cv.py  trial_registry.py
tests/: conftest.py  test_scaffold.py
tests/analytics/: test_bootstrap.py  test_concentration.py  test_distribution.py  test_drawdown.py  test_result_adapter.py  test_scorecard_markdown.py  test_sensitivity.py  test_sharpe.py
tests/bench/: test_baseline_state.py  test_compare.py  test_spy_20y_harness.py
tests/data/: test_contracts.py  test_expense_ratio_schedule.py  test_impacted_price_source.py  test_manifest.py  test_real_sp500_bundle.py  test_resolver.py  test_rolling.py  test_sharadar_adapter.py  test_sharadar_pull.py  test_ssga_loader.py  test_tr_reconstruction.py  test_universe.py
tests/engine/: _cpcv_momentum_factory.py  _runner_polars_probe.py  _runner_test_factories.py  _signal_gate_factory.py  test_bar_loop_pit_view.py  test_bar_loop_signal_gate.py  test_bar_loop_timing_breakdown.py  test_calendar.py  test_m1_demo.py  test_runner.py  test_runner_cpcv.py
tests/examples/: __init__.py  test_sp500_survivorship.py
tests/execution/: test_clock.py  test_matching.py  test_orders_dormancy.py
tests/execution/cost/: test_commission.py  test_impact.py
tests/integration/: test_constant_weight_demo.py  test_constant_weight_demo_m2_zero_cost.py  test_cost_estimate_vs_fill_tolerance.py  test_cost_estimator_wired_to_policy.py  test_cost_golden_fixture.py  test_cost_golden_fixture_e2e.py  test_permanent_impact_next_bar_mid_drops.py  test_sp500_momentum_study.py  test_spy_cost_sensitivity.py  test_spy_reconciliation.py
tests/integration/fixtures/: cost_3bar_golden.json
tests/lint/: test_determinism_invariants.py  test_market_state_keyword_only.py  test_runner_worker_polars_threads_first.py
tests/policy/: test_top_quintile.py
tests/signal/: test_momentum.py
tests/utils/: test_logging.py
tests/validation/: test_cv.py  test_cv_records.py  test_trial_registry.py
