[project]
name = "pit-backtest"
version = "0.0.0"
description = "U.S. equity daily-bar backtester built as a teaching artifact for systematic-trading research."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Sam Doane" }]

# Dependencies are pinned to exact patch per the determinism invariant
# documented in docs/methodology/determinism.md (Requirement 1).
# Bumping any pin is an explicit change that requires re-running the M1
# SPY reconciliation and recording the delta in the PR description.
dependencies = [
    "polars==1.41.1",
    "numpy==1.26.4",
    "pydantic==2.9.2",
    "attrs==24.2.0",
    "pandas-market-calendars==4.4.1",
    "tomli==2.0.2; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-env==1.1.5",  # supports [tool.pytest.ini_options].env per docs/methodology/determinism.md Requirement 4
    "mypy==1.13.0",
    "ruff==0.7.4",
]

[project.scripts]
pit-backtest = "pit_backtest.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pit_backtest"]

[tool.mypy]
# mypy strict mode per ADR 0001 decision 19. Every public function and
# class is fully typed; no implicit Any.
strict = true
python_version = "3.11"
files = ["src/pit_backtest"]
exclude = ["tests/"]
plugins = ["pydantic.mypy"]
# Strict-mode flags spelled out so a future contributor cannot quietly relax
# without an explicit edit:
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# PYTHONHASHSEED=0 per docs/methodology/determinism.md Requirement 4
# (no set iteration). Pinning the hash seed makes any accidental set
# iteration deterministic on the developer's machine and in CI, surfacing
# violations consistently.
env = [
    "PYTHONHASHSEED=0",
]
markers = [
    "kill_gate: tests that gate the M1 SPY reconciliation; failure ends the project per the kill-early rule",
    "snapshot: tests that require a Sharadar or SSGA snapshot; skipped in CI",
]
filterwarnings = [
    "error",  # warnings are errors in tests; explicit allowlists below
    "ignore::DeprecationWarning:polars",  # Polars version-specific deprecations not under our control
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
# Conservative rule set; expanded as the engine matures. The point at v1
# scaffold is mypy strict + reasonable ruff defaults, not a maximalist
# lint suite.
select = ["E", "F", "I", "W", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # assert False in placeholder tests
