[project]
name = "pit-backtest"
version = "0.0.0"
description = "U.S. equity daily-bar backtester built as a teaching artifact for systematic-trading research."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { file = "LICENSE" }
authors = [{ name = "Sam Doane" }]

# Dependencies are pinned to exact patch per the determinism invariant
# documented in docs/methodology/determinism.md (Requirement 1).
# Bumping any pin is an explicit change that requires re-running the M1
# SPY reconciliation and recording the delta in the PR description.
dependencies = [
    "polars==1.41.1",
    "numpy==1.26.4",
    "pydantic==2.9.2",
    "attrs==24.2.0",
    "pandas-market-calendars==4.4.1",
    # pandas is pulled transitively by pandas-market-calendars and by
    # nasdaq-data-link (dataops extra). Pinned here because pandas >= 3.0
    # requires numpy >= 2.0 which conflicts with our numpy 1.26.4 pin.
    # 2.2.3 is the last 2.x release with broad numpy 1.x support and is
    # the version nasdaq-data-link 1.0.4 was tested against.
    "pandas==2.2.3",
    "tomli==2.0.2; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "pytest-env==1.1.5",  # supports [tool.pytest.ini_options].env per docs/methodology/determinism.md Requirement 4
    "mypy==1.13.0",
    "ruff==0.7.4",
]
dataops = [
    "nasdaq-data-link==1.0.4",
    # pyarrow is required by polars.from_pandas() when pandas frames have
    # nullable extension dtypes (Int64, StringDtype) which Sharadar returns
    # by default. Loose pin because pyarrow is data-ingest-only; the on-disk
    # parquet SHA256 is what determinism gates on, not the in-memory
    # conversion path.
    "pyarrow>=18.0,<22",
    # openpyxl reads the SSGA-native XLSX exports (spdr-etf-historical-
    # distributions.xlsx and spdr-product-data-us-en.xlsx) directly so
    # we do not have to ask the user to transcribe period-return numbers
    # by hand. See docs/vendor/nasdaq-data-link-pull.md for the workflow.
    "openpyxl>=3.1,<4",
]

[project.scripts]
pit-backtest = "pit_backtest.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pit_backtest"]

[tool.mypy]
# mypy strict mode per ADR 0001 decision 19. Every public function and
# class is fully typed; no implicit Any.
strict = true
python_version = "3.11"
files = ["src/pit_backtest"]
exclude = ["tests/"]
plugins = ["pydantic.mypy"]
# Strict-mode flags spelled out so a future contributor cannot quietly relax
# without an explicit edit:
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# PYTHONHASHSEED=0 per docs/methodology/determinism.md Requirement 4
# (no set iteration). Pinning the hash seed makes any accidental set
# iteration deterministic on the developer's machine and in CI, surfacing
# violations consistently.
env = [
    "PYTHONHASHSEED=0",
]
markers = [
    "kill_gate: tests that gate the M1 SPY reconciliation; failure ends the project per the kill-early rule",
    "snapshot: tests that require a Sharadar or SSGA snapshot; skipped in CI",
    "dormant_until_m3: tests for contracts that are dormant at M2 per their ADR; M3 contributors must reckon with these markers before activating the contract (per ADR 0011 / cost-model tolerance dormancy)",
]
filterwarnings = [
    "error",  # warnings are errors in tests; explicit allowlists below
    "ignore::DeprecationWarning:polars",  # Polars version-specific deprecations not under our control
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
# Conservative rule set; expanded as the engine matures. The point at v1
# scaffold is mypy strict + reasonable ruff defaults, not a maximalist
# lint suite.
select = ["E", "F", "I", "W", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]  # assert False in placeholder tests
